--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "debug": "^3.2.7",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "fill-range": "^7.0.1",
     "fsevents": "^2.3.2",
     "glob-parent": "^5.1.2",
