--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "abbrev": "^1.1.1",
     "anymatch": "^3.1.3",
     "balanced-match": "^1.0.2",
+    "bcrypt": "^5.1.0",
     "binary-extensions": "^2.2.0",
     "brace-expansion": "^1.1.11",
     "braces": "^3.0.2",
@@ -19,6 +20,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "express-validator": "^7.0.1",
     "fill-range": "^7.0.1",
     "fsevents": "^2.3.2",
     "glob-parent": "^5.1.2",
@@ -28,6 +30,7 @@
     "is-extglob": "^2.1.1",
     "is-glob": "^4.0.3",
     "is-number": "^7.0.0",
+    "jsonwebtoken": "^9.0.0",
     "minimatch": "^3.1.2",
     "ms": "^2.1.3",
     "nopt": "^1.0.10",
